k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: digital-wallet
  labels:
    app.kubernetes.io/name: digital-wallet
    app.kubernetes.io/part-of: digital-wallet
