k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallet-api-ingress
  namespace: digital-wallet
  labels:
    app.kubernetes.io/name: wallet-api
    app.kubernetes.io/component: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: api.digital-wallet.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallet-api-svc
                port:
                  number: 80
